reposition clear button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div>
-            <button class="clear" onclick="ClearFields()">CLEAR</button>
-        </div>
         <div class="table">
             <table>
                 <tr>
@@ -44,6 +41,9 @@
                     <td><input type="text" id="a1"></td>
                 </tr>
             </table>
+        </div>
+        <div class="center breathe">
+            <button class="clear" onclick="ClearFields()">CLEAR</button>
         </div>
         <div clsss="tools">
         
