--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
+        <div class="header">
+            <h1>FA Service Tool</h1>
+        </div>
         <div class="table">
             <table>
                 <tr>
